--- a/.github/workflows/deploy-static-wp-site.yml
+++ b/.github/workflows/deploy-static-wp-site.yml
@@ -22,49 +22,49 @@ jobs:
             - name: Setup WP
               id: setup_wp
               uses: holyhope/install-wordpress-github-action@main
-              with:
+              # with:
                 # Description: Select which version you want to download. Accepts a version
                 # number, 'latest' or 'nightly'.
                 #
                 # Default: latest
-                wordpress_version: ""
+                # wordpress_version: ""
 
                 # Description: The title of the new site.
                 #
                 # Default: WordPress
-                wordpress_title: ""
+                # wordpress_title: ""
 
                 # Description: The locale/language for the installation (e.g. `de_DE`).
                 #
                 # Default: en_US
-                wordpress_locale: ""
+                # wordpress_locale: ""
 
                 # Description: PHP version
                 #
                 # Default: 8.2
-                php_version: ""
+                # php_version: ""
 
                 # Description: PHP extensions to install. Each extension should be on a new line.
                 #
                 # Default: imagick
-                php_extensions: ""
+                # php_extensions: ""
 
                 # Description: WordPress Installation path
                 #
                 # Default: ${{ runner.temp }}/wordpress
-                installation_path: ""
+                # installation_path: ""
 
                 # Description: GitHub token
                 #
                 # Default: ${{ github.token }}
-                github_token: ""
+                # github_token: ""
 
                 # Description: Path to the WP-CLI binary. To use a custom version of WP-CLI, see
                 # the
                 # [`install-wp-cli` GitHub action](https://github.com/marketplace/actions/install-wp-cli)
                 # Default: Downloaded from the official WP-CLI website.
                 #
-                wp_cli_path: ""
+                # wp_cli_path: ""
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
