--- a/.github/workflows/deploy-static-wp-site.yml
+++ b/.github/workflows/deploy-static-wp-site.yml
@@ -74,6 +74,14 @@ jobs:
                 # Default: Downloaded from the official WP-CLI website.
                 #
                 # wp_cli_path: ""
+            - name: Install plugins
+              id: install_plugins
+              run: |
+                ${steps.setup_wp.outputs.wp_cli} plugin install simply-static --activate
+            - name: Generate Static Site
+              id: generate_static_site
+              run: |
+                ${steps.setup_wp.outputs.wp_cli} simply-static run
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
