--- a/.github/workflows/deploy-static-wp-site.yml
+++ b/.github/workflows/deploy-static-wp-site.yml
@@ -30,8 +30,8 @@ jobs:
               uses: actions/configure-pages@v5
             - name: Setup WP
               id: setup_wp
-              uses: holyhope/install-wordpress-github-action@main
-              # with:
+              uses: bradmkjr/install-wordpress-github-action@main
+              with:
                 # Description: Select which version you want to download. Accepts a version
                 # number, 'latest' or 'nightly'.
                 #
@@ -41,7 +41,7 @@ jobs:
                 # Description: The title of the new site.
                 #
                 # Default: WordPress
-                # wordpress_title: ""
+                wordpress_title: "WordPress Blog"
 
                 # Description: The locale/language for the installation (e.g. `de_DE`).
                 #
@@ -62,6 +62,11 @@ jobs:
                 #
                 # Default: ${{ runner.temp }}/wordpress
                 # installation_path: ""
+
+                # Description: WordPress Installation url
+                #
+                # Default: localhost
+                installation_host: "127.0.0.1"
 
                 # Description: GitHub token
                 #
