--- a/.github/workflows/deploy-static-wp-site.yml
+++ b/.github/workflows/deploy-static-wp-site.yml
@@ -66,7 +66,7 @@ jobs:
                 # Description: WordPress Installation url
                 #
                 # Default: localhost
-                installation_host: "127.0.0.1"
+                installation_host: "localhost"
 
                 # Description: GitHub token
                 #
@@ -89,7 +89,7 @@ jobs:
               id: generate_static_site
               run: |
                 ${{ steps.setup_wp.outputs.wp_cli }} staatic publish \
-                --path='${{ steps.setup_wp.outputs.path }}'
+                --path='${{ steps.setup_wp.outputs.path }}/wp-content/uploads/staatic/deploy'
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
