--- a/.github/workflows/deploy-static-wp-site.yml
+++ b/.github/workflows/deploy-static-wp-site.yml
@@ -51,7 +51,7 @@ jobs:
                 # number, 'latest' or 'nightly'.
                 #
                 # Default: latest
-                # wordpress_version: ""
+                wordpress_version: "5.6.1"
 
                 # Description: The title of the new site.
                 #
@@ -66,7 +66,7 @@ jobs:
                 # Description: PHP version
                 #
                 # Default: 8.2
-                # php_version: ""
+                php_version: "7.4"
 
                 # Description: PHP extensions to install. Each extension should be on a new line.
                 #
